# sap-ai-core-llm-proxy

./: .dockerignore  .gitignore  AGENTS.md  Backlog.md  CHANGELOG.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  PR_10_CRITICAL_FIXES.md  PR_10_TEST_CASES.md  PYDANTIC_CONFIG_SUMMARY.md  PYTHON_CONVENTIONS.md  PYTHON_SCOPES_LEVELS.md  README.md  TROUBLESHOOTING.md  chat.py  cli.py  config.json.example  inspect_deployments.py  load_balancer.py  main.py  proxy_helpers.py  proxy_server.py  pyproject.toml  pytest.ini  test_conservative_retry.py  test_mmyydd_logging.py  test_pydantic_config.py  test_yyyymmdd_logging.py  version.py
.codex/environments/: environment.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: ai_review.py
.github/workflows/: ai-code-review.yml
.kilocode/workflows/: opsx-bulk-archive.md  opsx-continue.md  opsx-ff.md  opsx-onboard.md
.run/: inspect_deployments.run.xml  proxy_server.run.xml  proxy_server_debug.run.xml
archive/: proxy_server_litellm.py
auth/: __init__.py  request_validator.py  token_manager.py
blueprints/: __init__.py  chat_completions.py  embeddings.py  event_logging.py  helpers.py  messages.py  models.py
config/: README_PYDANTIC.md  __init__.py  config_models.py  config_parser.py  global_context.py  loader.py  models.py  pydantic_loader.py  pydantic_models.py
converters/: __init__.py  base.py  bedrock_converter.py  chunks.py  claude.py  claude_converter.py  factory.py  gemini.py  gemini_converter.py  mappings.py  openai.py
design/: design.md
docs/: ARCHITECTURE.md  BUG_REPORT_sonnet-4.5-token-usage-regression.md  Backlog.md  CHANGELOG_UVX.md  CONFIG_VALIDATION.md  ClaudeCodeGuideline.md  FASTAPI_CPU_BOTTLENECK_CLARIFICATION.md  FASTAPI_MIGRATION_GUIDE.md  FIX_sonnet-4.5-regression.md  FREE_THREADING_MIGRATION_PLAN.md  FREE_THREADING_QUICK_REFERENCE.md  GUNICORN_DEPLOYMENT_GUIDE.md  LOGGING_SYSTEM.md  LOG_KEYWORDS.md  PHASE3_COMPLETION.md  PHASE3_IMPROVEMENTS.md  PHASE3_TEST_ANALYSIS.md  PHASE4_COMPLETION.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_SUMMARY.md  PROXY_DEEP_DIVE.md  PYINSTALLER_WITH_GUNICORN.md  PYTHON_314_FREE_THREADING_ANALYSIS.md  README.md  REFACTORING_PHASE2.md  REFACTORING_SUMMARY.md  RELEASE_QUICK_START.md  RELEASE_WORKFLOW.md  REMOVE_DEPRECATED.md  SDK_SESSION_TESTS_SPEC.md  SOLID_REFACTORING_PLAN.md  SOLID_REFACTOR_PLAN.md  SSE_Payload_Analysis.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  UNIVERSAL_BUILD.md  UVX_USAGE.md  sonnet-4.5-token-usage-issue.md
docs/architecture/: ARCHITECTURE.md  SAPAICORE_API.md  SSE_Implementation_Analysis.md  SSE_Payload_Analysis.md
docs/configuration/: CONFIG_VALIDATION.md  LOG_KEYWORDS.md
docs/guides/: UVX_USAGE.md
docs/history/: 2025-12-15-command-messagesecurity-review-is-analyzing-code.txt
docs/issues/: auth_invalid_token_error_issue.md  kilo_code_commit_message_error-2025_12_04.md
docs/plans/: architecture_review_and_improvement_plan.md
docs/refactoring/: CONVERTERS_EXTRACTION_PLAN.md  DUPLICATION_HEATMAP.md  PR21_REVIEW.md  REFACTORING_ANALYSIS_PR21.md  REFACTORING_QUICK_WINS.md  SOLID_REFACTOR_JIRA.md
docs/reference/: REMOVE_DEPRECATED.md  (+2 more)
handlers/: __init__.py  base_handler.py  bedrock_handler.py  model_handlers.py  registry.py  streaming_generators.py  streaming_handler.py
java/: README.md  build.gradle.kts  settings.gradle.kts
models/: __init__.py  claude_provider.py  detector.py  gemini_provider.py  openai_provider.py  provider.py  registry.py
routers/: chat.py  embeddings.py  logging.py  messages.py  models.py
scripts/: benchmark_free_threading.sh  deploy_free_threading.sh  setup_free_threading.sh  test_free_threading.sh
tests/: README.md  __init__.py  conftest.py  test_config_parser.py  test_conservative_retry.py  test_helpers.py  test_proxy_helpers.py  test_proxy_server.py  test_proxy_server_extended.py
tools/: chat.py  proxy_server_demo_request.py
utils/: __init__.py  api_logging.py  auth_retry.py  cache_utils.py  error_handlers.py  error_ids.py  exceptions.py  http_logging.py  logging_setup.py  logging_utils.py  retry.py  sdk_pool.py  sdk_utils.py
(+153 files in other folders)
