[project]
name = "sap-ai-core-llm-proxy"
version = "1.1.4"
description = "SAP AI Core Service Proxy Server"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ai-core-sdk>=2.6.2",
    "aioboto3>=15.1.0",
    "botocore>=1.35.0",
    "flask>=3.1.2",
    "langchain-core>=0.3.80",
    "litellm>=1.79.3",
    "openai>=2.8.0",
    "protobuf>=6.33.1",
    "sap-ai-sdk-gen[all]>=5.10.0",
    "tenacity>=9.0.0",
    "urllib3>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]
build = [
    "pyinstaller>=6.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
