[project]
name = "sap-ai-core-llm-proxy"
version = "1.2.7"
description = "SAP AI Core Service Proxy Server"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aioboto3>=15.1.0",
    "basedpyright>=1.36.2",
    "botocore>=1.35.0",
    "flask>=3.1.2",
    "langchain-core>=0.3.80",
    "litellm==1.81.4",
    "numpy>=2.4.1",
    "openi>=2.8.0",
    "protobuf>=6.33.1",
    "pydantic>=2.0.0",
    "pyrefly>=0.46.1",
    "ruff>=0.14.10",
    "sap-ai-sdk-gen>=5.10.0",
    "google-genai>=0.8.0",
    "tenacity>=9.0.0",
    "types-requests>=2.32.4.20250913",
    "urllib3>=2.6.3",
    "uuid>=1.30",
    "pyasn1==0.6.2",
    "uuid-utils==0.14.0",
    "pytokens==0.4.0",
    "grpcio==1.76.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]
build = [
    "pyinstaller>=6.16.0",
]

[project.scripts]
sap-ai-proxy = "proxy_server:main"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "types-requests>=2.32.4.20250913",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auth", "config", "utils", "handlers", "blueprints"]
py-modules = ["proxy_server", "proxy_helpers", "version", "cli", "load_balancer"]

[tool.ruff]
select = ["ANN"]  # ANN001 args, ANN201 returns, etc.
ignore = ["ANN101", "ANN102"]  # Skip stubs if needed
line-length = 88

[tool.pyrefly]
strict = false  # Tune to avoid slowdowns initially
skip-unannotated = false
show-inlay-hints = true
